test/errors/extern1.qk

#OUTPUT
#Syntax Error: Expected "func" keyword.
# -> [10] extern printf(s:str, ...)
#
#END

#RET 1

extern printf(s:str, ...)

func main -> int
    return 0
end

